@@ -1,3 +1,0 @@
-explain register int a[4]
-                     ^
-22: error: array can not be register
