@@ -1,1 +1,0 @@
-cdecl @ @ @ explain register int a[4] @ 65
